--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@itoa/fields-color": "^2.0.2",
     "@itoa/file-adapters": "^8.0.1",
     "@itoa/itoa": "^1.0.1",
+    "@itoa/app-static": "^6.0.1",
     "@itoa/lib": "file:lib",
     "@itoa/list-plugins": "^9.0.2",
     "@itoa/schemas": "file:schemas",
